--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "Zohaib Rauf",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cids": "^0.5.0"
+  }
 }
