--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
     "compilerOptions": {
 		"outDir": "./dist/",
 		"experimentalDecorators": true,
-		"sourceMap": true,
+		"noImplicitReturns": true,
 		"noImplicitAny": true,
+		"noImplicitThis": true,
+		"declaration": true,
 		"module": "commonjs",
 		"target": "es5",
 		"lib": [
@@ -12,7 +14,7 @@
 		]
     },
     "include": [
-	"./src/**/*",
-	"index.ts"
+		"./src/**/*",
+		"index.ts"
     ]
 }
